k8/testing-ingress/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: ingresstest
  annotations:
    kubernetes.io/ingress.class: "traefik"

spec:
  rules:
  - host: whoami.com
  - http:
      paths:
      - path: /web1
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              name: web
